@@ -197,10 +197,10 @@ static void opd_read_module_info(void)
 	while (1) {
 		line = op_get_line(fp);
 
-		if (feof(fp)) {
-			free(line);
+		if (!line)
 			break;
-		} else if (line[0] == '\0') {
+
+		if (line[0] == '\0') {
 			free(line);
 			continue;
 		}
@@ -274,11 +274,14 @@ static void opd_get_module_info(void)
 
 	while (1) {
 		line = op_get_line(fp);
-		if (!strcmp("", line) && !feof(fp)) {
+
+		if (!line)
+			break;
+
+		if (!strcmp("", line)) {
 			free(line);
 			continue;
-		} else if (!strcmp("",line))
-			goto failure;
+		}
 
 		if (strlen(line) < 9) {
 			printf("oprofiled: corrupt /proc/ksyms line \"%s\"\n", line);
@@ -350,7 +353,8 @@ static void opd_get_module_info(void)
 	}
 
 failure:
-	free(line);
+	if (line)
+		free(line);
 	op_close_file(fp);
 }
  
